--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <video class="video-slide" src="./assets/video/video8.mp4" autoplay muted loop></video>
             <video class="video-slide" src="./assets/video/video9.mp4" autoplay muted loop></video>
             <div class="content active">
-                <h2>Discover your place</h2>
+                <h2 >Discover your place</h2>
                 <h1 class="home__data-title">Explore The <br> Best <b>Beautiful <br> Beaches</b></h1>
                 <a  href="#">Read More</a>
             </div>
@@ -183,13 +183,9 @@
                 </p>
 
                 <div class="video__content">
-                    <video id="video-file">
+                    <video id="video-file"  autoplay muted loop>
                         <source src="assets/video/video.mp4" type="video/mp4">
                     </video>
-
-                    <button class="button button--flex video__button" id="video-button">
-                        <i class="ri-play-line video__button-icon" id="video-icon"></i>
-                    </button>
                 </div>
             </div>
         </section>
@@ -321,7 +317,6 @@
 
                     <form action="" class="subscribe__form">
                         <input type="text" placeholder="Enter email" class="subscribe__input">
-
                         <button class="button">
                             Subscribe
                         </button>
